# proto-hal

./: Cargo.toml  ci.sh  notes.md
.github/workflows/: ci.yml
ir/: Cargo.toml
ir/src/: lib.rs  structures.rs
ir/src/structures/: entitlement.rs  field.rs  hal.rs  interrupts.rs  peripheral.rs  register.rs  variant.rs
ir/src/structures/field/: access.rs  numericity.rs
macros/: Cargo.toml
macros/src/: lib.rs
model/: Cargo.toml
model-macros/: Cargo.toml
model-macros/src/: lib.rs
model/src/: diagnostic.rs  entitlement.rs  error.rs  field.rs  group.rs  interrupts.rs  lib.rs  model.rs  peripheral.rs  prelude.rs  register.rs  structures.rs  validation.rs  variant.rs
model/src/entitlement/: codegen.rs  pattern.rs  search.rs  space.rs
model/src/field/: access.rs  numericity.rs
model/src/structures/: entitlement.rs  field.rs  interrupts.rs  model.rs  peripheral.rs  register.rs  variant.rs
model/src/structures/field/: access.rs  numericity.rs
proto-hal-build/: Cargo.toml
proto-hal-build/src/: codegen.rs  lib.rs
proto-hal-build/src/codegen/: macros.rs  render.rs
proto-hal-build/src/codegen/macros/: diagnostic.rs  gates.rs  parsing.rs
proto-hal-build/src/codegen/macros/gates/: fragments.rs  modify.rs  modify_untracked.rs  read.rs  read_untracked.rs  unmask.rs  utils.rs  write.rs  write_untracked.rs
proto-hal-build/src/codegen/macros/gates/fragments/: constraints.rs  generics.rs  input_ty.rs  modify_argument.rs  modify_argument_value.rs  parameter_write_value.rs  read_return_def.rs  read_return_init.rs  read_return_ty.rs  read_value_expr.rs  read_value_ty.rs  register_address.rs  register_read_return_def.rs  register_read_return_init.rs  register_return_def.rs  register_return_init.rs  register_write_value.rs  return_def.rs  return_init.rs  return_ty.rs  shift.rs  transition_return_ty.rs  write_argument.rs  write_argument_value.rs  write_parameter_ty.rs  write_value.rs  write_value_ty.rs
proto-hal-build/src/codegen/macros/gates/utils/: return_rank.rs
proto-hal-build/src/codegen/macros/parsing/: lexical.rs  semantic.rs  syntax.rs
proto-hal-build/src/codegen/macros/parsing/lexical/: binding.rs  entry.rs  gate.rs  transition.rs  tree.rs
proto-hal-build/src/codegen/macros/parsing/semantic/: entry.rs  keys.rs  policies.rs  transition.rs  utils.rs
proto-hal-build/src/codegen/macros/parsing/semantic/policies/: field.rs  peripheral.rs
proto-hal-build/src/codegen/macros/parsing/syntax/: binding.rs  gate.rs  overrides.rs  transition.rs  tree.rs
proto-hal-macros/src/: lib.rs
proto-hal/src/: interrupt.rs  stasis.rs
tests/abstract/macros/: Cargo.toml
tests/abstract/model/: Cargo.toml
tests/abstract/model/src/: lib.rs  main.rs
tests/g4/: Cargo.toml
tests/g4/macros/: Cargo.toml
tests/g4/model/: Cargo.toml
tests/g4/model/src/: cordic.rs  crc.rs  lib.rs  main.rs  rcc.rs
tests/g4/model/src/cordic/: csr.rs  rdata.rs  wdata.rs
tests/g4/model/src/cordic/csr/: argsize.rs  dmaren.rs  dmawen.rs  func.rs  ien.rs  nargs.rs  nres.rs  precision.rs  ressize.rs  rrdy.rs  scale.rs
tests/g4/model/src/cordic/rdata/: res.rs  res0.rs  res1.rs  resx.rs
tests/g4/model/src/cordic/wdata/: arg.rs  arg0.rs  arg1.rs
tests/g4/model/src/crc/: cr.rs  dr.rs  idr.rs
tests/g4/model/src/crc/cr/: polysize.rs  rev_in.rs  rev_out.rs  rst.rs
tests/g4/model/src/rcc/: ahb1enr.rs  ahb2enr.rs  ahbenr.rs  enr.rs
tests/g4/model/src/rcc/ahbenr/: en.rs
tests/g4/model/src/rcc/enr/: en.rs
tests/g4/model/src/syscfg/: exticr.rs
tests/g4/src/: lib.rs
