[workspace]
members = ["proto-hal", "build", "model", "tests/g4", "tests/abstract/*", "macros", "model-macros"]
exclude = ["debug-bin"]
resolver = "2"

[workspace.dependencies]
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["as_ref", "deref", "deref_mut", "from"] }
indexmap = "2.11.4"
Inflector = "0.11.4"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.42"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
ters = "0.2.0"
tiva = "0.3.0"

# inject local crates for tests
[patch."https://github.com/adinack/proto-hal"]
proto-hal = { path = "proto-hal" }
proto-hal-build = { path = "build" }
proto-hal-model = { path = "model" }
proto-hal-macros = { path = "macros" }
proto-hal-model-macros = { path = "model-macros" }

[patch."https://github.com/adinack/cortex-m-spa"]
cortex-m-spa = { path = "/Users/adinack/Projects/cortex-m-spa/out" }
cortex-m-spa-model = { path = "/Users/adinack/Projects/cortex-m-spa/model" }

[patch."https://github.com/adinack/stm32-spa"]
stm32-spa = { path = "/Users/adinack/Projects/stm32-spa/out" }
stm32-spa-model = { path = "/Users/adinack/Projects/stm32-spa/model" }
