[package]
name = "proto-hal-macros"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

build = { package = "proto-hal-build", path = "../build", default-features = false, features = ["macros"] }

[lib]
proc-macro = true
