[package]
name = "g4"
version = "0.1.0"
edition = "2024"

[dependencies]
proto-hal = { git = "https://github.com/adinack/proto-hal" }
stm32-spa = { git = "https://github.com/adinack/stm32-spa", features = ["g474"], default-features = false }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
